# Tool_RK3588VideoEncode_Lib

./: CMakeLists.txt  main.cpp  test.yuv
include/: venc.h
